[package]
name = "hentai"
version = "0.1.1"
description = "a WIP rust client for the nhentai api"
authors = ["EmperorParzival <29981946+EmperorParzival@users.noreply.github.com>"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["hentai", "nhentai", "hmanga", "anime", "manga", "nsfw"]
repository = "https://github.com/EmperorParzival/hentai.git"
homepage = "https://github.com/EmperorParzival/hentai"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
rustfmt = "0.10.0"
