[package]
name = "hentai"
version = "0.1.2"
description = "a WIP rust client for the nhentai api"
authors = ["EmperorParzival <29981946+EmperorParzival@users.noreply.github.com>"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["hentai", "nhentai", "hmanga", "anime", "nsfw"]
repository = "https://github.com/EmperorParzival/hentai.git"
homepage = "https://github.com/EmperorParzival/hentai"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
serde_json = "1.0.62"
serde = { version = "1.0.123", features = ["derive"] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.19", features = ["serde"] }
hyper = { version = "0.14.4", features = ["full"] }

[dev-dependencies]
rustfmt = "0.10.0"
